// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should match the snapshot 1`] = `
<div>
  <div
    class="rcx-box rcx-box--full rcx-css-1hgfa0p"
    role="listitem"
  >
    <div
      class="rcx-box rcx-box--full rcx-css-ilfe77"
    >
      <figure
        class="rcx-box rcx-box--full rcx-avatar rcx-avatar--x24"
      >
        <img
          alt="Avatar"
          aria-hidden="true"
          class="rcx-avatar__element rcx-avatar__element--x24"
          data-username="john.doe"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2Oora39DwAFaQJ3y3rKeAAAAABJRU5ErkJggg=="
          title="john.doe"
        />
      </figure>
      <span
        class="rcx-box rcx-box--full rcx-css-ws1yyr"
      >
        John Doe
      </span>
    </div>
    <span
      class="rcx-box rcx-box--full rcx-css-gehg27"
    >
      01/01/2026 10:00:00 AM
    </span>
  </div>
</div>
`;

exports[`should match the snapshot when the avatar image fails to load 1`] = `
<div>
  <div
    class="rcx-box rcx-box--full rcx-css-1hgfa0p"
    role="listitem"
  >
    <div
      class="rcx-box rcx-box--full rcx-css-ilfe77"
    >
      <span
        alt="Avatar"
        aria-hidden="true"
        class="rcx-skeleton rcx-skeleton--rect rcx-css-zix7if"
        data-username="john.doe"
        title="john.doe"
      />
      <span
        class="rcx-box rcx-box--full rcx-css-ws1yyr"
      >
        John Doe
      </span>
    </div>
    <span
      class="rcx-box rcx-box--full rcx-css-gehg27"
    >
      01/01/2026 10:00:00 AM
    </span>
  </div>
</div>
`;
